[gd_scene load_steps=2 format=3 uid="uid://cqpb0dultw10e"]

[ext_resource type="Script" path="res://resources/interfaces/battle_screen/modules/skill_indicator/skill_indicator.gd" id="1_6643b"]

[node name="SkillIndicator" type="Control"]
layout_mode = 3
anchor_left = -1.0
anchor_top = 0.45
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6643b")

[node name="IndicatorBackground" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="IndicatorText" type="Label" parent="IndicatorBackground"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Activates {Insert skill name here}"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
